--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="utf-8">
-	<title>Shopping Live</title> 
+	<title>trararay</title> 
 </head>
 
 
     <body>
-
+ <h1> hello word ,,,,</h1>
 
     </body>
     </html>
